testsuite/tests/parser/unicode/T18225B.stderr

T18225B.hs:11:23: error: [GHC-03790]
    Parse error in command: [| x |]
